# FastAPI_Reservation_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  makefile  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_01_28_2152-49ef442ab821_event_model.py  2025_01_28_2152-67e6c0218a00_user_model.py  2025_01_28_2152-f24e3d81adbf_reservation_model.py  2025_01_28_2222-a5295c53e0a8_edit_date_on_events.py  2025_01_29_1552-52db903a396e_add_username_in_user_model.py  2025_01_29_1554-7814c9f71372_add_foreign_key_for_events.py  2025_01_29_1620-2af8b027e723_add_relationships.py  2025_01_29_1624-22ad617d42a9_delete_seats_from_reservations.py  2025_01_29_1741-40a88328b75c_delete_password_from_user_model.py
src/core/: base.py  config.py  database.py  exceptions.py  kafka.py  schemas.py  transaction_middleware.py
src/events/: models.py  repositories.py  router.py  schemas.py  services.py
src/reservations/: models.py  repositories.py  router.py  schemas.py  services.py
src/users/: models.py  repositories.py  router.py  schemas.py  services.py
telegram_bot/: bot_config.py  main.py
telegram_bot/handlers/: common.py  events.py  reservations.py  users.py
telegram_bot/services/: api_client.py
